fix header gap

--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -3903,7 +3903,7 @@ img {
         margin-bottom: 140px;
     }
     .logo a {
-        padding-left: 190px;
+        padding-left: 150px;
     }
 }
 
